ディレクトリの間違えを修正

--- a/docker-release/app/Dockerfile
+++ b/docker-release/app/Dockerfile
@@ -4,7 +4,7 @@ FROM php:8.2-fpm AS app
 RUN docker-php-ext-install -j$(nproc) pdo pdo_mysql
 
 # php.iniの追加
-COPY docker/app/z-app-php.ini /usr/local/etc/php/conf.d/z-app-php.ini
+COPY docker-release/app/z-app-php.ini /usr/local/etc/php/conf.d/z-app-php.ini
 
 # appを追加
 COPY in_auth /var/www/in_auth
