indexファイルを修正

--- a/docker-release/web/Dockerfile
+++ b/docker-release/web/Dockerfile
@@ -13,4 +13,7 @@ COPY in_iass/iass_5.0 /var/www/in_iass/iass_5.0
 # all php extension file
 RUN rm /etc/nginx/conf.d/default.conf &&\
 find /var/www/in_auth -name "*.php" -type f | xargs rm &&\
-find /var/www/in_iass -name "*.php" -type f | xargs rm
+find /var/www/in_iass -name "*.php" -type f | xargs rm &&\
+touch /var/www/in_auth/auth_2.1/index.php &&\
+touch /var/www/in_iass/iass_5.0/index.php
+
