--- a/docker-release/web/iass.conf
+++ b/docker-release/web/iass.conf
@@ -8,7 +8,7 @@ server {
     listen [::]:81;
 
     root /var/www/in_iass/iass_5.0;
-    index index.html index.php;
+    index index.php;
 
     # リバースプロキシー配下なので、クライアントIPアドレスを継承
     set_real_ip_from 10.0.0.0/8;  # 信頼できるアドレス空間を指定
