--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - name: DB_HOST
               value: mariadb.local.irumaru.net
             - name: HTTP_S_DOMAIN
-              value: v-sys.maruru.me
+              value: binarymonster.net
             - name: HTTP_SCHEMA
               value: https
           volumeMounts:
