開発環境用ドメインを変更

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - ../in_auth:/var/www/in_auth
     environment:
       - DB_HOST=127.0.0.1
-      - HTTP_S_DOMAIN=binarymonster.net
+      - HTTP_S_DOMAIN=marurun.local
       - HTTP_SCHEMA=http
   web:
     build:
