--- a/docker/web/auth.conf
+++ b/docker/web/auth.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name auth.binarymonster.net;
+    server_name auth.marurun.local;
 
     root /var/www/in_auth/auth_2.1;
     index index.html index.php;
