--- a/docker/web/iass.conf
+++ b/docker/web/iass.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name iass.binarymonster.net;
+    server_name iass.marurun.local;
 
     root /var/www/in_iass/iass_5.0;
     index index.html index.php;
