--- a/docker-release/docker-compose.yaml
+++ b/docker-release/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     build:
       context: ../
       dockerfile: docker-release/app/Dockerfile
+    image: gitlab-registry.maruru.me/ilts/iass:1.0.3-app
     network_mode: "host"
     # アプリケーションファイルはコンテナレイヤーで追加
     #volumes:
@@ -17,6 +18,7 @@ services:
     build:
       context: ../
       dockerfile: docker-release/web/Dockerfile
+    image: gitlab-registry.maruru.me/ilts/iass:1.0.3-web
     network_mode: "host"
     ports:
      - "80:80"
