--- a/.devcontainer/web/devcontainer.json
+++ b/.devcontainer/web/devcontainer.json
@@ -1,16 +1,24 @@
 {
-	"name": "web",
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
-	"remoteUser": "node",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"42crunch.vscode-openapi",
-				"esbenp.prettier-vscode",
-				"bradlc.vscode-tailwindcss"
-			]
-		}
-	}
+  "name": "web",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
+  "mounts": [
+    {
+      "source": "node_modules",
+      "target": "/workspaces/iass/web/node_modules",
+      "type": "volume"
+    }
+  ],
+  "remoteUser": "node",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "42crunch.vscode-openapi",
+        "esbenp.prettier-vscode",
+        "bradlc.vscode-tailwindcss"
+      ]
+    }
+  },
+  "postStartCommand": "sudo chown -R node:node /workspaces/iass/web/node_modules"
 }
