--- a/web/package.json
+++ b/web/package.json
@@ -22,12 +22,14 @@
     "@remix-run/serve": "^2.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hls.js": "^1.5.20",
     "isbot": "^4.1.0",
     "lucide-react": "^0.477.0",
     "openapi-fetch": "^0.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "screenfull": "^6.0.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
